fixed nav z-index issue

--- a/rh/css/stylesheet.css
+++ b/rh/css/stylesheet.css
@@ -30,13 +30,15 @@ em { color: #FFF; }
 /*drop-down*/
 .nav ul > div > li > ul { display: block; position: absolute; top: 52px; left: 100%; right: -100%; text-align: center; padding: 0px; }
 .nav ul > div > li:hover > ul,.nav ul a li:active > ul { left: 0%; right: 0%; display: block;  }
-.nav ul > div > li > ul > div { background-color: rgba(220,216,209,0.90); padding: 24px; display: inline-block; margin-top: 40px; }
+.nav ul > div > li > ul > div { background-color: rgba(220,216,209,0.90); padding: 24px; display: inline-block; margin-top: 40px; height: 144px;  }
 .nav ul > div > li > ul > div > li:first-of-type { margin: 0px -4px 0px -4px; }
-.nav ul > div > li > ul > div > li { display: inline-block; width: 12.5%; height: 100%;  margin: 0px -4px 0px 0px; overflow: hidden; }
+.nav ul > div > li > ul > div > li { display: inline-block; width: 12.5%; height: 100%;  margin: 0px -4px 0px 0px; overflow: hidden; border: 0px solid transparent; }
+.nav ul > div > li > ul > div > li:hover { border: 16px solid transparent; }
 .nav ul > div > li > ul > div > li > img { width: 100%; height: 100%; }
 
 .nav ul > div > li > div { display: block; position: absolute; top: 52px; left: 100%; right: -100%; text-align: center; padding: 0px; }
 .nav ul > div > li:hover > div { left: 0%; right: 0%; display: block; }
+.nav .one-third { width: 33.3332%; }
 
 /*nav extras*/
 .logo { cursor: pointer; }
@@ -60,7 +62,7 @@ em { color: #FFF; }
 .header .right .body { text-align: left; background-color: rgba(220,216,209,0.90);}
 .header .right .body .four { width: 24.75%; }
 .header .right .body .third { width: 33.3332%; }
-.header .right .body a { display: inline-block; margin: 1px -2px 0px 0px; }
+.header .right .body a { display: inline-block; margin: 1px -2px 0px 0px; border: 0px solid transparent; }
 .header .right .body a:hover { border: 16px solid transparent; }
 .header .right .body img { width: 100%; height: auto; }
 .header .right .bottom { padding: 0px 8px; background-color: rgba(220,216,209,0.90); }
@@ -132,10 +134,12 @@ em { color: #FFF; }
   .nav .button { display: block; margin: 30px 0px 30px auto; } 
   .nav ul {
     background-color: rgba(220,216,209,0.90);
-    margin: -0px -245px 0px 0px;
+    overflow: hidden;
+    margin: -0px 200% 0px 0px;
     text-align: center;
     padding: 20px;
     opacity: 0;
+    display: none;
   }
   .nav ul > a { display: block; line-height: 48px; }
   .nav ul a { margin: 0px 0px 0px 0px; }
@@ -153,6 +157,7 @@ em { color: #FFF; }
   .nav ul > div > li > ul > div > li {  width: 12.5%; display: inline-block; height: 100%;}
   .nav ul > div > li > ul > div > li > a { display: block; }
   .nav ul > div > li > ul > div > li > a > img { width: 100%; height: 100%; }
+  .nav .one-third { width: 12.5%; }
   
   .header .right .top img { max-width: 48px; }
   .header .right .top h3 { font-size: 24px;  }
